Update code for new data from momepy preprocessing
- Add possibility for random max_slope generation

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-09-11  "
+    "Last modified: 2024-10-01  "
    ]
   },
   {
@@ -38,6 +38,9 @@
     "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Add node distances to closest kommune boundary\n",
+    "- [ ] Create a preprocessing step for poi snapping\n",
+    "- [ ] Create testing possibility with random poi data, without poi snapping\n",
+    "- [ ] Make all constants allcaps\n",
     "- [x] Snap POIs to the original link geometries, within a threshold\n",
     "- [x] Incorporate gradients\n",
     "- [x] Add loop permutations for node-based analysis\n",
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f81d35c7",
    "metadata": {},
    "outputs": [],
@@ -80,12 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f3f65809-7982-4af5-8ac0-74adc0c05ac8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i setup_parameters.py"
+    "%run -i setup_parameters.py\n",
+    "np.random.seed(42)"
    ]
   },
   {
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "54eee093-c956-4804-8add-6a4f41a86cb9",
    "metadata": {},
    "outputs": [],
@@ -124,13 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cf6ab763",
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = gpd.read_file(PATH[\"data_in_network\"] + \"edges_slope.gpkg\")\n",
+    "edges = gpd.read_file(PATH[\"data_in_network\"] + \"edges.gpkg\")\n",
     "edges_orig = edges  # Make a deep copy to save the geometries\n",
+    "edges[\"edge_id\"] = edges.index  # Make index the edge id\n",
+    "if not MAXSLOPES_AVAILABLE:\n",
+    "    edges[\"max_slope\"] = np.random.normal(2, 0.8, edges.shape[0])\n",
     "nodes = gpd.read_file(PATH[\"data_in_network\"] + \"nodes.gpkg\")\n",
     "# Set CRS\n",
     "edges.set_crs(\"epsg:25832\")\n",
@@ -139,240 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cb292f8c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gml_id</th>\n",
-       "      <th>temakode</th>\n",
-       "      <th>temanavn</th>\n",
-       "      <th>objekt_id</th>\n",
-       "      <th>versions_id</th>\n",
-       "      <th>timePosition</th>\n",
-       "      <th>oprettet|timePosition</th>\n",
-       "      <th>cvr_kode</th>\n",
-       "      <th>cvr_navn</th>\n",
-       "      <th>kommunekode</th>\n",
-       "      <th>...</th>\n",
-       "      <th>note</th>\n",
-       "      <th>link</th>\n",
-       "      <th>edge_id</th>\n",
-       "      <th>u</th>\n",
-       "      <th>v</th>\n",
-       "      <th>key</th>\n",
-       "      <th>min_slope</th>\n",
-       "      <th>max_slope</th>\n",
-       "      <th>ave_slope</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>fkg.t_5609_cykelknudepunktsstraekninger.f83c6f...</td>\n",
-       "      <td>5609</td>\n",
-       "      <td>t_5609_cykelknudepunktsstraekninger_t</td>\n",
-       "      <td>f83c6fc6-dfb5-11ee-b4c6-d94919180272</td>\n",
-       "      <td>10c59050-1994-11ef-8aa0-a34fefefbaf3</td>\n",
-       "      <td>2024-05-24T06:08:12Z</td>\n",
-       "      <td>2024-03-11T13:45:58Z</td>\n",
-       "      <td>29188645</td>\n",
-       "      <td>Faaborg-Midtfyn Kommune</td>\n",
-       "      <td>430</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>l10846</td>\n",
-       "      <td>vk7223</td>\n",
-       "      <td>vk7224</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.124905</td>\n",
-       "      <td>2.790215</td>\n",
-       "      <td>1.473042</td>\n",
-       "      <td>LINESTRING (580233.580 6105998.150, 580232.640...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>fkg.t_5609_cykelknudepunktsstraekninger.00cfad...</td>\n",
-       "      <td>5609</td>\n",
-       "      <td>t_5609_cykelknudepunktsstraekninger_t</td>\n",
-       "      <td>00cfad10-dfb6-11ee-b4c6-d94919180272</td>\n",
-       "      <td>0fa7182e-1994-11ef-8aa0-a34fefefbaf3</td>\n",
-       "      <td>2024-05-24T06:08:12Z</td>\n",
-       "      <td>2024-03-11T13:45:58Z</td>\n",
-       "      <td>29188947</td>\n",
-       "      <td>Nordfyns Kommune</td>\n",
-       "      <td>480</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>l14211</td>\n",
-       "      <td>vk7153</td>\n",
-       "      <td>vk9060</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.139345</td>\n",
-       "      <td>3.169458</td>\n",
-       "      <td>1.113741</td>\n",
-       "      <td>LINESTRING (568936.790 6158369.320, 568930.700...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>fkg.t_5609_cykelknudepunktsstraekninger.02e290...</td>\n",
-       "      <td>5609</td>\n",
-       "      <td>t_5609_cykelknudepunktsstraekninger_t</td>\n",
-       "      <td>02e29090-dfb6-11ee-b4c6-d94919180272</td>\n",
-       "      <td>0f99905a-1994-11ef-8aa0-a34fefefbaf3</td>\n",
-       "      <td>2024-05-24T06:08:12Z</td>\n",
-       "      <td>2024-03-11T13:45:58Z</td>\n",
-       "      <td>29189730</td>\n",
-       "      <td>Svendborg Kommune</td>\n",
-       "      <td>479</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>l13809</td>\n",
-       "      <td>vk8862</td>\n",
-       "      <td>vk8867</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.120187</td>\n",
-       "      <td>5.609792</td>\n",
-       "      <td>1.549713</td>\n",
-       "      <td>LINESTRING (608776.990 6101177.320, 608782.270...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>fkg.t_5609_cykelknudepunktsstraekninger.d77dce...</td>\n",
-       "      <td>5609</td>\n",
-       "      <td>t_5609_cykelknudepunktsstraekninger_t</td>\n",
-       "      <td>d77dce10-dfb5-11ee-b4c6-d94919180272</td>\n",
-       "      <td>0fa8efe6-1994-11ef-8aa0-a34fefefbaf3</td>\n",
-       "      <td>2024-05-24T06:08:12Z</td>\n",
-       "      <td>2024-03-11T13:45:58Z</td>\n",
-       "      <td>29188645</td>\n",
-       "      <td>Faaborg-Midtfyn Kommune</td>\n",
-       "      <td>430</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>l4995</td>\n",
-       "      <td>vk3101</td>\n",
-       "      <td>vk7213</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.448308</td>\n",
-       "      <td>2.448308</td>\n",
-       "      <td>2.448308</td>\n",
-       "      <td>LINESTRING (579243.700 6107408.390, 579245.150...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>fkg.t_5609_cykelknudepunktsstraekninger.f8b5f7...</td>\n",
-       "      <td>5609</td>\n",
-       "      <td>t_5609_cykelknudepunktsstraekninger_t</td>\n",
-       "      <td>f8b5f756-dfb5-11ee-b4c6-d94919180272</td>\n",
-       "      <td>0f9f7a1a-1994-11ef-8aa0-a34fefefbaf3</td>\n",
-       "      <td>2024-05-24T06:08:12Z</td>\n",
-       "      <td>2024-03-11T13:45:58Z</td>\n",
-       "      <td>35209115</td>\n",
-       "      <td>Odense Kommune</td>\n",
-       "      <td>461</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>l11479</td>\n",
-       "      <td>vk16486</td>\n",
-       "      <td>vk7554</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.767726</td>\n",
-       "      <td>1.260772</td>\n",
-       "      <td>1.014249</td>\n",
-       "      <td>LINESTRING (587732.030 6137017.300, 587725.660...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 36 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              gml_id  temakode  \\\n",
-       "0  fkg.t_5609_cykelknudepunktsstraekninger.f83c6f...      5609   \n",
-       "1  fkg.t_5609_cykelknudepunktsstraekninger.00cfad...      5609   \n",
-       "2  fkg.t_5609_cykelknudepunktsstraekninger.02e290...      5609   \n",
-       "3  fkg.t_5609_cykelknudepunktsstraekninger.d77dce...      5609   \n",
-       "4  fkg.t_5609_cykelknudepunktsstraekninger.f8b5f7...      5609   \n",
-       "\n",
-       "                                temanavn  \\\n",
-       "0  t_5609_cykelknudepunktsstraekninger_t   \n",
-       "1  t_5609_cykelknudepunktsstraekninger_t   \n",
-       "2  t_5609_cykelknudepunktsstraekninger_t   \n",
-       "3  t_5609_cykelknudepunktsstraekninger_t   \n",
-       "4  t_5609_cykelknudepunktsstraekninger_t   \n",
-       "\n",
-       "                              objekt_id                           versions_id  \\\n",
-       "0  f83c6fc6-dfb5-11ee-b4c6-d94919180272  10c59050-1994-11ef-8aa0-a34fefefbaf3   \n",
-       "1  00cfad10-dfb6-11ee-b4c6-d94919180272  0fa7182e-1994-11ef-8aa0-a34fefefbaf3   \n",
-       "2  02e29090-dfb6-11ee-b4c6-d94919180272  0f99905a-1994-11ef-8aa0-a34fefefbaf3   \n",
-       "3  d77dce10-dfb5-11ee-b4c6-d94919180272  0fa8efe6-1994-11ef-8aa0-a34fefefbaf3   \n",
-       "4  f8b5f756-dfb5-11ee-b4c6-d94919180272  0f9f7a1a-1994-11ef-8aa0-a34fefefbaf3   \n",
-       "\n",
-       "           timePosition oprettet|timePosition  cvr_kode  \\\n",
-       "0  2024-05-24T06:08:12Z  2024-03-11T13:45:58Z  29188645   \n",
-       "1  2024-05-24T06:08:12Z  2024-03-11T13:45:58Z  29188947   \n",
-       "2  2024-05-24T06:08:12Z  2024-03-11T13:45:58Z  29189730   \n",
-       "3  2024-05-24T06:08:12Z  2024-03-11T13:45:58Z  29188645   \n",
-       "4  2024-05-24T06:08:12Z  2024-03-11T13:45:58Z  35209115   \n",
-       "\n",
-       "                  cvr_navn  kommunekode  ...  note  link edge_id        u  \\\n",
-       "0  Faaborg-Midtfyn Kommune          430  ...  None  None  l10846   vk7223   \n",
-       "1         Nordfyns Kommune          480  ...  None  None  l14211   vk7153   \n",
-       "2        Svendborg Kommune          479  ...  None  None  l13809   vk8862   \n",
-       "3  Faaborg-Midtfyn Kommune          430  ...  None  None   l4995   vk3101   \n",
-       "4           Odense Kommune          461  ...  None  None  l11479  vk16486   \n",
-       "\n",
-       "        v  key min_slope  max_slope ave_slope  \\\n",
-       "0  vk7224    0  0.124905   2.790215  1.473042   \n",
-       "1  vk9060    0  0.139345   3.169458  1.113741   \n",
-       "2  vk8867    0  0.120187   5.609792  1.549713   \n",
-       "3  vk7213    0  2.448308   2.448308  2.448308   \n",
-       "4  vk7554    0  0.767726   1.260772  1.014249   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  LINESTRING (580233.580 6105998.150, 580232.640...  \n",
-       "1  LINESTRING (568936.790 6158369.320, 568930.700...  \n",
-       "2  LINESTRING (608776.990 6101177.320, 608782.270...  \n",
-       "3  LINESTRING (579243.700 6107408.390, 579245.150...  \n",
-       "4  LINESTRING (587732.030 6137017.300, 587725.660...  \n",
-       "\n",
-       "[5 rows x 36 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "edges.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c19feec-9c84-4fee-9499-16dca061b4bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes.head()"
    ]
   },
   {
@@ -382,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes_id = list(nodes.node_id)\n",
+    "nodes_id = list(nodes.nodeID)\n",
     "nodes_x = list(nodes.geometry.x)\n",
     "nodes_y = list(nodes.geometry.y)\n",
     "nodes_coords = list(zip(NormalizeData(nodes_x), NormalizeData(nodes_y)))"
@@ -395,17 +184,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rename length to weight for igraph\n",
-    "edges = edges.rename(columns={\"length\": \"weight\"})\n",
+    "# Rename mm_len to weight for igraph\n",
+    "edges = edges.rename(columns={\"mm_len\": \"weight\"})\n",
     "# Drop unused columns\n",
-    "used_columns = {\"u\": (), \"v\": (), \"weight\": (), \"max_slope\": (), \"edge_id\": ()}\n",
+    "used_columns = {\n",
+    "    \"node_start\": (),\n",
+    "    \"node_end\": (),\n",
+    "    \"weight\": (),\n",
+    "    \"max_slope\": (),\n",
+    "    \"edge_id\": (),\n",
+    "}\n",
     "for c_name, _ in edges.items():\n",
     "    if c_name not in used_columns:\n",
     "        del edges[c_name]\n",
     "\n",
     "# Reorder columns\n",
-    "edges = edges[[\"u\", \"v\", \"weight\", \"max_slope\", \"edge_id\"]]\n",
-    "edges = edges.dropna()  # Drop edges with None u or v\n",
+    "edges = edges[[\"node_start\", \"node_end\", \"weight\", \"max_slope\", \"edge_id\"]]\n",
+    "edges = edges.dropna()  # Drop edges with None node_start or node_end\n",
     "edges"
    ]
   },
@@ -428,7 +223,7 @@
     "    edges.itertuples(index=False),\n",
     "    directed=False,\n",
     "    weights=False,\n",
-    "    edge_attrs=[\"weight\", \"max_slope\", \"edge_id\"],\n",
+    "    edge_attrs=[\"weight\", \"edge_id\", \"max_slope\"],\n",
     ")"
    ]
   },
@@ -500,7 +295,7 @@
    "id": "39599aef",
    "metadata": {},
    "source": [
-    "They are really dangling links which go outside the region, were mistakenly connected to themselves."
+    "They can be dangling links which go outside the region, were mistakenly connected to themselves."
    ]
   },
   {
@@ -579,27 +374,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e4664f3a",
-   "metadata": {},
-   "source": [
-    "This should include all non-ismain nodes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ca7071c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes_nonismain = nodes.loc[nodes[\"ismain\"] == 0]\n",
-    "nodes_nonismain = nodes_nonismain[\"node_id\"].to_list()\n",
-    "# Turn to dict for fast finding\n",
-    "nodes_nonismain = {nodes_nonismain[i]: True for i in range(len(nodes_nonismain))}"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e47cadff",
@@ -610,7 +384,6 @@
     "\n",
     "# Unclear how to select nodes in igraph by name, so let's iterate through them\n",
     "for v in G.vs:\n",
-    "    #     if v[\"name\"] in nodes_nonismain and v.degree() == 2:\n",
     "    if v.degree() == 2:\n",
     "        # Remember node to delete\n",
     "        to_delete_ids.append(v.index)\n",
@@ -765,27 +538,7 @@
    "id": "5f3760a9-efb8-4d37-bdee-25d2b7d75eeb",
    "metadata": {},
    "source": [
-    "We have a small number of facilities and links, so it should be fine to loop through all pairwise."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03e34624-bce4-4bd5-a5e3-93185b90a522",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poi_files = {\n",
-    "    \"facility\": [\n",
-    "        \"facilities_within_reach_100.gpkg\",\n",
-    "        \"facilities_outside_reach_100.gpkg\",\n",
-    "    ],\n",
-    "    \"service\": [\n",
-    "        \"service_within_reach_500.gpkg\",\n",
-    "        \"service_outside_reach_500.gpkg\",\n",
-    "    ],\n",
-    "    \"attraction\": [\"pois_within_reach_1000.gpkg\", \"pois_outside_reach_1000.gpkg\"],\n",
-    "}"
+    "We have a small number of facilities and links, so computationally it should be fine to loop through all pairwise."
    ]
   },
   {
