--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -39,7 +39,7 @@
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Add node distances to closest kommune boundary\n",
     "- [ ] Create a preprocessing step for poi snapping\n",
-    "- [ ] Create testing possibility with random poi data, without poi snapping\n",
+    "- [X] Create testing possibility with random poi data, without poi snapping\n",
     "- [ ] Make all constants allcaps\n",
     "- [x] Snap POIs to the original link geometries, within a threshold\n",
     "- [x] Incorporate gradients\n",
@@ -566,6 +566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize\n",
     "for e in G.es:\n",
     "    e[\"has_water\"] = False\n",
     "    e[\"has_facility\"] = False\n",
@@ -573,54 +574,62 @@
     "    e[\"has_attraction\"] = False\n",
     "    e[\"poi_diversity\"] = 0\n",
     "\n",
-    "e_haspoi = {\"facility\": set(), \"service\": set(), \"attraction\": set()}\n",
-    "for cat in [*poi_files]:\n",
-    "    for f in poi_files[cat]:\n",
-    "        print(\"Adding POIs from file: \" + f)\n",
-    "        pois = gpd.read_file(PATH[\"data_in_pois\"] + f)\n",
-    "        for _, poirow in tqdm(pois.iterrows(), total=pois.shape[0]):\n",
-    "            d = 999999999999\n",
-    "            eid = False\n",
-    "            if poirow[\"type\"]:  # Could add conditions on type later, like Vandpost\n",
-    "                poi_this = poirow[\"geometry\"]\n",
-    "                for eindex, erow in edges_orig.iterrows():\n",
-    "                    d_this = poi_this.distance(erow[\"geometry\"])\n",
-    "                    if d_this < d and erow[\"edge_id\"] in edges_orig[\"edge_id\"].values:\n",
-    "                        d = d_this\n",
-    "                        eid = erow[\"edge_id\"]\n",
-    "            if eid and d <= snap_threshold:\n",
-    "                e_haspoi[cat].add(eid)\n",
+    "if not POIS_AVAILABLE:  # Create random data for testing\n",
+    "    for e in G.es:\n",
+    "        e[\"has_facility\"] = True if np.random.rand() < 0.1 else False\n",
+    "        e[\"has_service\"] = True if np.random.rand() < 0.15 else False\n",
+    "        e[\"has_attraction\"] = True if np.random.rand() < 0.05 else False\n",
+    "        poi_diversity = 0\n",
+    "        if e[\"has_facility\"]:\n",
+    "            e[\"has_water\"] = True\n",
+    "            poi_diversity += 1\n",
+    "        if e[\"has_service\"]:\n",
+    "            e[\"has_water\"] = True\n",
+    "            poi_diversity += 1\n",
+    "        if e[\"has_attraction\"]:\n",
+    "            e[\"has_water\"] = True\n",
+    "            poi_diversity += 1\n",
+    "        e[\"poi_diversity\"] = poi_diversity\n",
     "\n",
-    "e_haswater = set()\n",
-    "e_haswater = e_haspoi[\"facility\"] | e_haspoi[\"service\"] | e_haspoi[\"attraction\"]\n",
+    "else:  # Use available poi files\n",
+    "    e_haspoi = {\"facility\": set(), \"service\": set(), \"attraction\": set()}\n",
+    "    for cat in [*poi_files]:\n",
+    "        for f in poi_files[cat]:\n",
+    "            print(\"Adding POIs from file: \" + f)\n",
+    "            pois = gpd.read_file(PATH[\"data_in_pois\"] + f)\n",
+    "            for _, poirow in tqdm(pois.iterrows(), total=pois.shape[0]):\n",
+    "                d = 999999999999\n",
+    "                eid = False\n",
+    "                if poirow[\"type\"]:  # Could add conditions on type later, like Vandpost\n",
+    "                    poi_this = poirow[\"geometry\"]\n",
+    "                    for eindex, erow in edges_orig.iterrows():\n",
+    "                        d_this = poi_this.distance(erow[\"geometry\"])\n",
+    "                        if (\n",
+    "                            d_this < d\n",
+    "                            and erow[\"edge_id\"] in edges_orig[\"edge_id\"].values\n",
+    "                        ):\n",
+    "                            d = d_this\n",
+    "                            eid = erow[\"edge_id\"]\n",
+    "                if eid and d <= snap_threshold:\n",
+    "                    e_haspoi[cat].add(eid)\n",
     "\n",
-    "for e in G.es:\n",
-    "    poi_diversity = 0\n",
-    "    if e[\"edge_id\"] in e_haswater:\n",
-    "        e[\"has_water\"] = True\n",
-    "    if e[\"edge_id\"] in e_haspoi[\"facility\"]:\n",
-    "        e[\"has_facility\"] = True\n",
-    "        poi_diversity += 1\n",
-    "    if e[\"edge_id\"] in e_haspoi[\"service\"]:\n",
-    "        e[\"has_service\"] = True\n",
-    "        poi_diversity += 1\n",
-    "    if e[\"edge_id\"] in e_haspoi[\"attraction\"]:\n",
-    "        e[\"has_attraction\"] = True\n",
-    "        poi_diversity += 1\n",
-    "    e[\"poi_diversity\"] = poi_diversity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f35925f-5f39-47c8-89f8-5efb12287e6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Alternatively, for testing, we could randomly populate the graph with a new edge property has_water\n",
-    "# seed(10)\n",
-    "# for e in G.es:\n",
-    "#     e[\"has_water\"] = True if random() < 0.1 else False"
+    "    e_haswater = set()\n",
+    "    e_haswater = e_haspoi[\"facility\"] | e_haspoi[\"service\"] | e_haspoi[\"attraction\"]\n",
+    "\n",
+    "    for e in G.es:\n",
+    "        poi_diversity = 0\n",
+    "        if e[\"edge_id\"] in e_haswater:\n",
+    "            e[\"has_water\"] = True\n",
+    "        if e[\"edge_id\"] in e_haspoi[\"facility\"]:\n",
+    "            e[\"has_facility\"] = True\n",
+    "            poi_diversity += 1\n",
+    "        if e[\"edge_id\"] in e_haspoi[\"service\"]:\n",
+    "            e[\"has_service\"] = True\n",
+    "            poi_diversity += 1\n",
+    "        if e[\"edge_id\"] in e_haspoi[\"attraction\"]:\n",
+    "            e[\"has_attraction\"] = True\n",
+    "            poi_diversity += 1\n",
+    "        e[\"poi_diversity\"] = poi_diversity"
    ]
   },
   {
@@ -657,7 +666,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_width=edge_widths)\n",
+    "fig = plotCheck(\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=get_vertexsize(G.vcount()),\n",
+    "    edge_width=edge_widths,\n",
+    ")\n",
     "plt.text(0, 0.04, \"POI diversity\")\n",
     "plt.tight_layout()"
    ]
@@ -671,7 +686,13 @@
    },
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=edge_colors)\n",
+    "fig = plotCheck(\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=get_vertexsize(G.vcount()),\n",
+    "    edge_color=edge_colors,\n",
+    ")\n",
     "plt.text(0, 0.04, \"Water links highlighted\")\n",
     "plt.tight_layout()"
    ]
@@ -730,7 +751,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=edge_colors)\n",
+    "fig = plotCheck(\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size=get_vertexsize(G.vcount()),\n",
+    "    edge_color=edge_colors,\n",
+    ")\n",
     "plt.text(\n",
     "    0,\n",
     "    0.04,\n",
@@ -1194,7 +1221,13 @@
    },
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=edge_colors)\n",
+    "fig = plotCheck(\n",
+    "    G,\n",
+    "    nodes_id,\n",
+    "    nodes_coords,\n",
+    "    vertex_size == get_vertexsize(G.vcount()),\n",
+    "    edge_color=edge_colors,\n",
+    ")\n",
     "plt.text(0, 0.04, \"Conforming face loops highlighted\")\n",
     "plt.tight_layout()"
    ]
