Add new vertex size function to all network plots

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "plotCheck(G, nodes_id, nodes_coords, vertex_size=get_vertexsize(G.vcount()));"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "plotCheck(G, nodes_id, nodes_coords, vertex_size=get_vertexsize(G.vcount()));"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "plotCheck(G, nodes_id, nodes_coords, vertex_size=get_vertexsize(G.vcount()));"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "plotCheck(G, nodes_id, nodes_coords, vertex_size=get_vertexsize(G.vcount()));"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "plotCheck(G, nodes_id, nodes_coords, vertex_size=get_vertexsize(G.vcount()));"
    ]
   },
   {
@@ -475,7 +475,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "plotCheck(G, nodes_id, nodes_coords, vertex_size=get_vertexsize(G.vcount()));"
    ]
   },
   {
@@ -509,7 +509,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords);"
+    "plotCheck(G, nodes_id, nodes_coords, vertex_size=get_vertexsize(G.vcount()));"
    ]
   },
   {
