Fix selection of longest loop from loop basis

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -39,6 +39,7 @@
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Add node distances to closest kommune boundary\n",
     "- [ ] Create a preprocessing step for poi snapping\n",
+    "- [ ] fix: minimum cycle basis is not necessarily face cycle basis(?)\n",
     "- [X] Create testing possibility with random poi data, without poi snapping\n",
     "- [ ] Make all constants allcaps\n",
     "- [x] Snap POIs to the original link geometries, within a threshold\n",
@@ -735,10 +736,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show longest loop in minimal loop basis (last has most nodes)\n",
+    "# Show longest loop in minimal loop basis\n",
+    "res = {key: val[\"length\"] for key, val in loopbasis.items()}\n",
+    "k = max(res, key=res.get)  # Get face loop with longest length\n",
+    "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e.index in loopbasis[max(loopbasis.keys())][\"edges\"]:\n",
+    "    if e.index in loopbasis[k][\"edges\"]:\n",
     "        edge_colors.append(\"red\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")"
@@ -762,7 +766,7 @@
     "    0,\n",
     "    0.04,\n",
     "    \"Longest face loop highlighted: \"\n",
-    "    + str(int(loopbasis[max(loopbasis.keys())][\"length\"]))\n",
+    "    + str(int((MPERUNIT / 1000) * loopbasis[max(loopbasis.keys())][\"length\"]))\n",
     "    + \"km\",\n",
     ")\n",
     "plt.tight_layout()"
@@ -942,7 +946,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linklengths = [e[\"weight\"] * mperunit for e in G.es]\n",
+    "linklengths = [e[\"weight\"] * MPERUNIT for e in G.es]\n",
     "linkmaxslopes = [e[\"max_slope\"] for e in G.es]\n",
     "fig = plt.figure(figsize=(8, 3))\n",
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
@@ -1077,9 +1081,9 @@
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
     "axes1.hist(alllooplengths, density=True)\n",
-    "if mperunit == 1000:\n",
+    "if MPERUNIT == 1000:\n",
     "    axes1.set_xlabel(\"Length [km]\")\n",
-    "elif mperunit == 1:\n",
+    "elif MPERUNIT == 1:\n",
     "    axes1.set_xlabel(\"Length [m]\")\n",
     "else:\n",
     "    axes1.set_xlabel(\"Length\")\n",
@@ -1108,12 +1112,12 @@
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
     "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
     "\n",
-    "facelooplengths = [c[\"length\"] * mperunit for c in loopbasis.values()]\n",
+    "facelooplengths = [c[\"length\"] * MPERUNIT for c in loopbasis.values()]\n",
     "\n",
     "histxy = axes1.hist(facelooplengths, density=False)\n",
-    "if mperunit == 1000:\n",
+    "if MPERUNIT == 1000:\n",
     "    axes1.set_xlabel(\"Length [km]\")\n",
-    "elif mperunit == 1:\n",
+    "elif MPERUNIT == 1:\n",
     "    axes1.set_xlabel(\"Length [m]\")\n",
     "else:\n",
     "    axes1.set_xlabel(\"Length\")\n",
@@ -1199,8 +1203,8 @@
     "okedges = set()\n",
     "for c in loopbasis.values():\n",
     "    if (\n",
-    "        c[\"length\"] * mperunit >= faceloop_limit[0]\n",
-    "        and c[\"length\"] * mperunit <= faceloop_limit[1]\n",
+    "        c[\"length\"] * MPERUNIT >= faceloop_limit[0]\n",
+    "        and c[\"length\"] * MPERUNIT <= faceloop_limit[1]\n",
     "    ):\n",
     "        okedges = okedges.union(set(c[\"edges\"]))\n",
     "\n",
