--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-09-11"
+    "Last modified: 2024-10-01"
    ]
   },
   {
@@ -160,9 +160,9 @@
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
     "axes1.hist(alllooplengths, density=True)\n",
-    "if mperunit == 1000:\n",
+    "if MPERUNIT == 1000:\n",
     "    axes1.set_xlabel(\"Length [km]\")\n",
-    "elif mperunit == 1:\n",
+    "elif MPERUNIT == 1:\n",
     "    axes1.set_xlabel(\"Length [m]\")\n",
     "else:\n",
     "    axes1.set_xlabel(\"Length\")\n",
@@ -203,7 +203,7 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops):\n",
-    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * mperunit\n",
+    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
     "    mask_this = (this_lengths >= restrictions[\"looplength_min\"]) & (\n",
     "        this_lengths <= restrictions[\"looplength_max\"]\n",
     "    )\n",
@@ -287,7 +287,7 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops):\n",
-    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * mperunit\n",
+    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
     "    this_maxslopes = np.array(allloops[sourcenode][\"max_slopes\"])\n",
     "    mask_this = this_lengths >= restrictions[\"looplength_min\"]\n",
     "    mask_this &= this_lengths <= restrictions[\"looplength_max\"]\n",
