Make all constants all caps

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -39,9 +39,9 @@
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Add node distances to closest kommune boundary\n",
     "- [ ] Create a preprocessing step for poi snapping\n",
-    "- [ ] fix: minimum cycle basis is not necessarily face cycle basis(?)\n",
+    "- [ ] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
     "- [X] Create testing possibility with random poi data, without poi snapping\n",
-    "- [ ] Make all constants allcaps\n",
+    "- [X] Make all constants allcaps\n",
     "- [x] Snap POIs to the original link geometries, within a threshold\n",
     "- [x] Incorporate gradients\n",
     "- [x] Add loop permutations for node-based analysis\n",
@@ -531,7 +531,7 @@
     "- Services (camping ground, hotel, gas station, etc.)\n",
     "- Attractions (church, museum, beach, etc.)  \n",
     "\n",
-    "If any of these is within reach of a link, the link is assumed to provide water. Further, we define a link's POI diversity $Y \\in \\{0,1,2,3\\}$ as the unique number of POI categories within reach. For simplicity, reach is defined with the same constant `snap_threshold` for all POI categories."
+    "If any of these is within reach of a link, the link is assumed to provide water. Further, we define a link's POI diversity $Y \\in \\{0,1,2,3\\}$ as the unique number of POI categories within reach. For simplicity, reach is defined with the same constant `SNAP_THRESHOLD` for all POI categories."
    ]
   },
   {
@@ -611,7 +611,7 @@
     "                        ):\n",
     "                            d = d_this\n",
     "                            eid = erow[\"edge_id\"]\n",
-    "                if eid and d <= snap_threshold:\n",
+    "                if eid and d <= SNAP_THRESHOLD:\n",
     "                    e_haspoi[cat].add(eid)\n",
     "\n",
     "    e_haswater = set()\n",
@@ -831,7 +831,7 @@
     "allloops_unique = {}\n",
     "nodes_done = set()\n",
     "numloops_unique = 0\n",
-    "allloops_generator = nx.simple_cycles(Gnx, length_bound=loop_numnode_bound)\n",
+    "allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
     "for c in tqdm(allloops_generator):\n",
     "    sourcenode = c[0]\n",
     "    c_length = getLoopLength(c)\n",
@@ -860,7 +860,7 @@
     "    \"Found \"\n",
     "    + str(numloops_unique)\n",
     "    + \" unique loops for length bound \"\n",
-    "    + str(loop_numnode_bound)\n",
+    "    + str(LOOP_NUMNODE_BOUND)\n",
     ")"
    ]
   },
@@ -875,7 +875,7 @@
     "allloops = {}\n",
     "nodes_done = set()\n",
     "numloops = 0\n",
-    "allloops_generator = nx.simple_cycles(Gnx, length_bound=loop_numnode_bound)\n",
+    "allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
     "for c in tqdm(allloops_generator):\n",
     "    sourcenode = c[0]\n",
     "    c_length = getLoopLength(c)\n",
@@ -901,7 +901,7 @@
     "                \"poi_diversity\": [c_poi_diversity],\n",
     "            }\n",
     "            nodes_done.add(sourcenode)\n",
-    "print(\"Found \" + str(numloops) + \" loops for length bound \" + str(loop_numnode_bound))"
+    "print(\"Found \" + str(numloops) + \" loops for length bound \" + str(LOOP_NUMNODE_BOUND))"
    ]
   },
   {
@@ -953,26 +953,26 @@
     "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
     "\n",
     "histxy = axes1.hist(linklengths, density=False)\n",
-    "axes1.plot([link_limit[0], link_limit[0]], [0, max(histxy[0])], \":k\")\n",
-    "axes1.plot([link_limit[1], link_limit[1]], [0, max(histxy[0])], \":k\")\n",
-    "axes1.plot([link_limit[2], link_limit[2]], [0, max(histxy[0])], \":r\")\n",
+    "axes1.plot([LINK_LIMIT[0], LINK_LIMIT[0]], [0, max(histxy[0])], \":k\")\n",
+    "axes1.plot([LINK_LIMIT[1], LINK_LIMIT[1]], [0, max(histxy[0])], \":k\")\n",
+    "axes1.plot([LINK_LIMIT[2], LINK_LIMIT[2]], [0, max(histxy[0])], \":r\")\n",
     "indcond = [\n",
-    "    i for i, x in enumerate(linklengths) if (x >= link_limit[0] and x <= link_limit[1])\n",
+    "    i for i, x in enumerate(linklengths) if (x >= LINK_LIMIT[0] and x <= LINK_LIMIT[1])\n",
     "]\n",
     "massinallowedrange = round(len(indcond) / len(linklengths) * 100)  # Should be high\n",
     "axes1.text(\n",
-    "    (link_limit[0] + link_limit[1]) / 2,\n",
+    "    (LINK_LIMIT[0] + LINK_LIMIT[1]) / 2,\n",
     "    max(histxy[0]),\n",
     "    str(massinallowedrange) + \"%\",\n",
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
     ")\n",
     "axes1.text(\n",
-    "    link_limit[0] * 0.9,\n",
+    "    LINK_LIMIT[0] * 0.9,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(linklengths) if (x <= link_limit[0])])\n",
+    "            len([i for i, x in enumerate(linklengths) if (x <= LINK_LIMIT[0])])\n",
     "            / len(linklengths)\n",
     "            * 100\n",
     "        )\n",
@@ -982,7 +982,7 @@
     "    verticalalignment=\"top\",\n",
     ")\n",
     "axes1.text(\n",
-    "    (link_limit[1] + link_limit[2]) / 2,\n",
+    "    (LINK_LIMIT[1] + LINK_LIMIT[2]) / 2,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
@@ -990,7 +990,7 @@
     "                [\n",
     "                    i\n",
     "                    for i, x in enumerate(linklengths)\n",
-    "                    if (x >= link_limit[1] and x <= link_limit[2])\n",
+    "                    if (x >= LINK_LIMIT[1] and x <= LINK_LIMIT[2])\n",
     "                ]\n",
     "            )\n",
     "            / len(linklengths)\n",
@@ -1002,11 +1002,11 @@
     "    verticalalignment=\"top\",\n",
     ")\n",
     "axes1.text(\n",
-    "    link_limit[2] * 1.01,\n",
+    "    LINK_LIMIT[2] * 1.01,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(linklengths) if (x > link_limit[2])])\n",
+    "            len([i for i, x in enumerate(linklengths) if (x > LINK_LIMIT[2])])\n",
     "            / len(linklengths)\n",
     "            * 100\n",
     "        )\n",
@@ -1022,13 +1022,13 @@
     "axes1.set_title(\"Link lengths\")\n",
     "\n",
     "histxy = axes2.hist(linkmaxslopes, density=False)\n",
-    "axes2.plot([maxslope_limit, maxslope_limit], [0, max(histxy[0])], \":r\")\n",
+    "axes2.plot([MAXSLOPE_LIMIT, MAXSLOPE_LIMIT], [0, max(histxy[0])], \":r\")\n",
     "axes2.text(\n",
-    "    maxslope_limit * 0.95,\n",
+    "    MAXSLOPE_LIMIT * 0.95,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(linkmaxslopes) if (x < maxslope_limit)])\n",
+    "            len([i for i, x in enumerate(linkmaxslopes) if (x < MAXSLOPE_LIMIT)])\n",
     "            / len(linkmaxslopes)\n",
     "            * 100\n",
     "        )\n",
@@ -1038,11 +1038,11 @@
     "    verticalalignment=\"top\",\n",
     ")\n",
     "axes2.text(\n",
-    "    maxslope_limit * 1.05,\n",
+    "    MAXSLOPE_LIMIT * 1.05,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(linkmaxslopes) if (x >= maxslope_limit)])\n",
+    "            len([i for i, x in enumerate(linkmaxslopes) if (x >= MAXSLOPE_LIMIT)])\n",
     "            / len(linkmaxslopes)\n",
     "            * 100\n",
     "        )\n",
@@ -1090,13 +1090,13 @@
     "axes1.set_ylabel(\"Probability\")\n",
     "axes1.set_title(\"Loop lengths\")\n",
     "\n",
-    "axes2.hist(allloopnumnodes, density=True, bins=list(range(loop_numnode_bound + 1)))\n",
+    "axes2.hist(allloopnumnodes, density=True, bins=list(range(LOOP_NUMNODE_BOUND + 1)))\n",
     "axes2.set_xlabel(\"Nodes\")\n",
     "axes2.set_title(\"Nodes per loop\")\n",
-    "axes2.set_xlim([0, loop_numnode_bound + 0.5])\n",
+    "axes2.set_xlim([0, LOOP_NUMNODE_BOUND + 0.5])\n",
     "\n",
-    "plt.text(loop_numnode_bound / 20, 0.01, \"Bound: \" + str(loop_numnode_bound))\n",
-    "plt.text(loop_numnode_bound / 20, 0.04, \"Loops: \" + str(numloops));"
+    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.01, \"Bound: \" + str(LOOP_NUMNODE_BOUND))\n",
+    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops));"
    ]
   },
   {
@@ -1123,10 +1123,10 @@
     "    axes1.set_xlabel(\"Length\")\n",
     "axes1.set_ylabel(\"Frequency\")\n",
     "axes1.set_title(\"Face loop lengths\")\n",
-    "axes1.plot([faceloop_limit[0], faceloop_limit[0]], [0, max(histxy[0])], \":k\")\n",
-    "axes1.plot([faceloop_limit[1], faceloop_limit[1]], [0, max(histxy[0])], \":r\")\n",
+    "axes1.plot([FACELOOP_LIMIT[0], FACELOOP_LIMIT[0]], [0, max(histxy[0])], \":k\")\n",
+    "axes1.plot([FACELOOP_LIMIT[1], FACELOOP_LIMIT[1]], [0, max(histxy[0])], \":r\")\n",
     "axes1.text(\n",
-    "    (faceloop_limit[0] + faceloop_limit[1]) / 2,\n",
+    "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
@@ -1134,7 +1134,7 @@
     "                [\n",
     "                    i\n",
     "                    for i, x in enumerate(facelooplengths)\n",
-    "                    if (x >= faceloop_limit[0] and x <= faceloop_limit[1])\n",
+    "                    if (x >= FACELOOP_LIMIT[0] and x <= FACELOOP_LIMIT[1])\n",
     "                ]\n",
     "            )\n",
     "            / len(facelooplengths)\n",
@@ -1146,11 +1146,11 @@
     "    verticalalignment=\"top\",\n",
     ")\n",
     "axes1.text(\n",
-    "    faceloop_limit[0] * 0.95,\n",
+    "    FACELOOP_LIMIT[0] * 0.95,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(facelooplengths) if (x < faceloop_limit[0])])\n",
+    "            len([i for i, x in enumerate(facelooplengths) if (x < FACELOOP_LIMIT[0])])\n",
     "            / len(facelooplengths)\n",
     "            * 100\n",
     "        )\n",
@@ -1160,11 +1160,11 @@
     "    verticalalignment=\"top\",\n",
     ")\n",
     "axes1.text(\n",
-    "    faceloop_limit[1] * 1.01,\n",
+    "    FACELOOP_LIMIT[1] * 1.01,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(facelooplengths) if (x > faceloop_limit[1])])\n",
+    "            len([i for i, x in enumerate(facelooplengths) if (x > FACELOOP_LIMIT[1])])\n",
     "            / len(facelooplengths)\n",
     "            * 100\n",
     "        )\n",
@@ -1203,8 +1203,8 @@
     "okedges = set()\n",
     "for c in loopbasis.values():\n",
     "    if (\n",
-    "        c[\"length\"] * MPERUNIT >= faceloop_limit[0]\n",
-    "        and c[\"length\"] * MPERUNIT <= faceloop_limit[1]\n",
+    "        c[\"length\"] * MPERUNIT >= FACELOOP_LIMIT[0]\n",
+    "        and c[\"length\"] * MPERUNIT <= FACELOOP_LIMIT[1]\n",
     "    ):\n",
     "        okedges = okedges.union(set(c[\"edges\"]))\n",
     "\n",
@@ -1252,14 +1252,14 @@
    "outputs": [],
    "source": [
     "with open(\n",
-    "    PATH[\"data_out\"] + \"loopcensus_\" + str(loop_numnode_bound) + \".pkl\", \"wb\"\n",
+    "    PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + \".pkl\", \"wb\"\n",
     ") as f:\n",
     "    pickle.dump(allloops, f)\n",
     "    pickle.dump(alllooplengths, f)\n",
     "    pickle.dump(allloopnumnodes, f)\n",
     "    pickle.dump(allloopmaxslopes, f)\n",
     "    pickle.dump(G, f)\n",
-    "    pickle.dump(loop_numnode_bound, f)\n",
+    "    pickle.dump(LOOP_NUMNODE_BOUND, f)\n",
     "    pickle.dump(nodes_id, f)\n",
     "    pickle.dump(nodes_coords, f)\n",
     "    pickle.dump(numloops, f)\n",
