--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -72,7 +72,7 @@
     "%run -i setup_parameters.py\n",
     "load_data = False  # Set to False if data are huge and have already been loaded\n",
     "\n",
-    "if logscale:\n",
+    "if PLOTLOGSCALE:\n",
     "    logtextplot = \"10^\"\n",
     "    logtextsave = \"_logscale\"\n",
     "else:\n",
@@ -123,14 +123,14 @@
    "source": [
     "if load_data:\n",
     "    with open(\n",
-    "        PATH[\"data_out\"] + \"loopcensus_\" + str(loop_numnode_bound) + \".pkl\", \"rb\"\n",
+    "        PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + \".pkl\", \"rb\"\n",
     "    ) as f:\n",
     "        allloops = pickle.load(f)\n",
     "        alllooplengths = pickle.load(f)\n",
     "        allloopnumnodes = pickle.load(f)\n",
     "        allloopmaxslopes = pickle.load(f)\n",
     "        G = pickle.load(f)\n",
-    "        loop_numnode_bound = pickle.load(f)\n",
+    "        LOOP_NUMNODE_BOUND = pickle.load(f)\n",
     "        nodes_id = pickle.load(f)\n",
     "        nodes_coords = pickle.load(f)\n",
     "        numloops = pickle.load(f)\n",
@@ -169,13 +169,13 @@
     "axes1.set_ylabel(\"Probability\")\n",
     "axes1.set_title(\"Loop lengths\")\n",
     "\n",
-    "axes2.hist(allloopnumnodes, density=True, bins=list(range(loop_numnode_bound + 1)))\n",
+    "axes2.hist(allloopnumnodes, density=True, bins=list(range(LOOP_NUMNODE_BOUND + 1)))\n",
     "axes2.set_xlabel(\"Nodes\")\n",
     "axes2.set_title(\"Nodes per loop\")\n",
-    "axes2.set_xlim([0, loop_numnode_bound + 0.5])\n",
+    "axes2.set_xlim([0, LOOP_NUMNODE_BOUND + 0.5])\n",
     "\n",
-    "plt.text(loop_numnode_bound / 20, 0.01, \"Bound: \" + str(loop_numnode_bound))\n",
-    "plt.text(loop_numnode_bound / 20, 0.04, \"Loops: \" + str(numloops));"
+    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.01, \"Bound: \" + str(LOOP_NUMNODE_BOUND))\n",
+    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops));"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "id": "b62c74c8",
    "metadata": {},
    "source": [
-    "Go through all nodes and restrict their loops to the scenario's length restrictions"
+    "Go through all nodes and restrict their loops to the scenario's length restrictions."
    ]
   },
   {
@@ -204,8 +204,8 @@
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops):\n",
     "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
-    "    mask_this = (this_lengths >= restrictions[\"looplength_min\"]) & (\n",
-    "        this_lengths <= restrictions[\"looplength_max\"]\n",
+    "    mask_this = (this_lengths >= RESTRICTIONS[\"looplength_min\"]) & (\n",
+    "        this_lengths <= RESTRICTIONS[\"looplength_max\"]\n",
     "    )\n",
     "    allloops_bound[sourcenode] = {\n",
     "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
@@ -230,7 +230,7 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound.keys())):\n",
     "    try:\n",
-    "        if logscale:\n",
+    "        if PLOTLOGSCALE:\n",
     "            vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
@@ -263,9 +263,9 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[\"looplength_min\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[\"looplength_max\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
     "    + logtextsave\n",
     ")"
    ]
@@ -289,9 +289,9 @@
     "for sourcenode in tqdm(allloops):\n",
     "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
     "    this_maxslopes = np.array(allloops[sourcenode][\"max_slopes\"])\n",
-    "    mask_this = this_lengths >= restrictions[\"looplength_min\"]\n",
-    "    mask_this &= this_lengths <= restrictions[\"looplength_max\"]\n",
-    "    mask_this &= this_maxslopes <= restrictions[\"slope_max\"]\n",
+    "    mask_this = this_lengths >= RESTRICTIONS[\"looplength_min\"]\n",
+    "    mask_this &= this_lengths <= RESTRICTIONS[\"looplength_max\"]\n",
+    "    mask_this &= this_maxslopes <= RESTRICTIONS[\"slope_max\"]\n",
     "    allloops_bound[sourcenode] = {\n",
     "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
     "        \"lengths\": list(compress(allloops[sourcenode][\"lengths\"], mask_this)),\n",
@@ -315,7 +315,7 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound.keys())):\n",
     "    try:\n",
-    "        if logscale:\n",
+    "        if PLOTLOGSCALE:\n",
     "            vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
@@ -335,7 +335,7 @@
    "source": [
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > restrictions[\"slope_max\"]:\n",
+    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:\n",
     "        edge_colors.append(\"red\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")"
@@ -354,7 +354,7 @@
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(RESTRICTIONS[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
@@ -371,11 +371,11 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[\"looplength_min\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[\"looplength_max\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(restrictions[\"slope_max\"])\n",
+    "    + str(RESTRICTIONS[\"slope_max\"])\n",
     "    + logtextsave\n",
     ")"
    ]
@@ -404,18 +404,18 @@
     "        water_enough = True\n",
     "        if wp:  # There is water on the way somewhere. Check distances\n",
     "            for w in wp:\n",
-    "                if w > restrictions[\"waterlength_max\"]:\n",
+    "                if w > RESTRICTIONS[\"waterlength_max\"]:\n",
     "                    water_enough = False\n",
     "                    break\n",
     "            if water_enough and (\n",
     "                allloops_bound[sourcenode][\"lengths\"][i] - wp[-1]\n",
-    "                > restrictions[\"waterlength_max\"]\n",
+    "                > RESTRICTIONS[\"waterlength_max\"]\n",
     "            ):\n",
     "                water_enough = False\n",
     "        else:  # No water on the way, so the loop is only valid if short enough\n",
     "            if (\n",
     "                allloops_bound[sourcenode][\"lengths\"][i]\n",
-    "                > restrictions[\"waterlength_max\"]\n",
+    "                > RESTRICTIONS[\"waterlength_max\"]\n",
     "            ):\n",
     "                water_enough = False\n",
     "        mask_this[i] = water_enough\n",
@@ -442,7 +442,7 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound_watered.keys())):\n",
     "    try:\n",
-    "        if logscale:\n",
+    "        if PLOTLOGSCALE:\n",
     "            vertex_sizes.append(np.log10(len(allloops_bound_watered[k][\"loops\"]) + 1))\n",
     "        else:\n",
     "            vertex_sizes.append(len(allloops_bound_watered[k][\"loops\"]))\n",
@@ -463,11 +463,11 @@
    "source": [
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > restrictions[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
+    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
     "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > restrictions[\"slope_max\"] and e[\"has_water\"]:\n",
+    "    # elif e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"] and e[\"has_water\"]:\n",
     "    #     edge_colors.append(\"orange\")\n",
-    "    elif e[\"max_slope\"] <= restrictions[\"slope_max\"] and e[\"has_water\"]:\n",
+    "    elif e[\"max_slope\"] <= RESTRICTIONS[\"slope_max\"] and e[\"has_water\"]:\n",
     "        edge_colors.append(\"blue\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")"
@@ -486,14 +486,14 @@
     "plt.text(\n",
     "    0,\n",
     "    0.17,\n",
-    "    \"Blue: Gradient <=\" + str(restrictions[\"slope_max\"]) + \"% and water\",\n",
+    "    \"Blue: Gradient <=\" + str(RESTRICTIONS[\"slope_max\"]) + \"% and water\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[\"slope_max\"])+\"% and water\", fontsize=8);\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(RESTRICTIONS[\"slope_max\"])+\"% and water\", fontsize=8);\n",
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(RESTRICTIONS[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
@@ -512,13 +512,13 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[\"looplength_min\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[\"looplength_max\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(restrictions[\"slope_max\"])\n",
+    "    + str(RESTRICTIONS[\"slope_max\"])\n",
     "    + \"_waterlength_max\"\n",
-    "    + str(restrictions[\"waterlength_max\"])\n",
+    "    + str(RESTRICTIONS[\"waterlength_max\"])\n",
     "    + logtextsave\n",
     ")"
    ]
@@ -573,7 +573,7 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound_watered_diverse.keys())):\n",
     "    try:\n",
-    "        if logscale:\n",
+    "        if PLOTLOGSCALE:\n",
     "            vertex_sizes.append(\n",
     "                np.log10(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1)\n",
     "            )\n",
@@ -595,12 +595,12 @@
    "source": [
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > restrictions[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
+    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
     "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > restrictions[\"slope_max\"] and e[\"has_water\"]:\n",
+    "    # elif e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"] and e[\"has_water\"]:\n",
     "    #     edge_colors.append(\"orange\")\n",
     "    elif (\n",
-    "        e[\"max_slope\"] <= restrictions[\"slope_max\"]\n",
+    "        e[\"max_slope\"] <= RESTRICTIONS[\"slope_max\"]\n",
     "        and e[\"has_water\"]\n",
     "        and e[\"poi_diversity\"] >= 3\n",
     "    ):\n",
@@ -624,14 +624,14 @@
     "plt.text(\n",
     "    0,\n",
     "    0.17,\n",
-    "    \"Blue: Gradient <=\" + str(restrictions[\"slope_max\"]) + \"% and water and diverse\",\n",
+    "    \"Blue: Gradient <=\" + str(RESTRICTIONS[\"slope_max\"]) + \"% and water and diverse\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[\"slope_max\"])+\"% and water\", fontsize=8);\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(RESTRICTIONS[\"slope_max\"])+\"% and water\", fontsize=8);\n",
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(RESTRICTIONS[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
@@ -648,13 +648,13 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[\"looplength_min\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[\"looplength_max\"])\n",
+    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(restrictions[\"slope_max\"])\n",
+    "    + str(RESTRICTIONS[\"slope_max\"])\n",
     "    + \"_waterlength_max\"\n",
-    "    + str(restrictions[\"waterlength_max\"])\n",
+    "    + str(RESTRICTIONS[\"waterlength_max\"])\n",
     "    + \"_poidiversity3\"\n",
     "    + logtextsave\n",
     ")"
