--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -23,7 +23,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-01  \n",
-    "Last modified: 2024-10-01  "
+    "Last modified: 2024-10-02  "
    ]
   },
   {
@@ -300,7 +300,7 @@
    "id": "39599aef",
    "metadata": {},
    "source": [
-    "They can be dangling links which go outside the region, were mistakenly connected to themselves."
+    "They can be dangling links which go outside the region which were mistakenly connected to themselves."
    ]
   },
   {
@@ -670,39 +670,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6714b0a9-6505-47d6-ae5d-f6a22f485039",
+   "cell_type": "markdown",
+   "id": "b4a56f57-44d8-43d0-b652-2b5e982d68da",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "edge_colors = []\n",
-    "for e in G.es:\n",
-    "    if e[\"has_water\"]:\n",
-    "        edge_colors.append(\"blue\")\n",
-    "    else:\n",
-    "        edge_colors.append(\"grey\")"
+    "#### Plot POI diversity"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35380966-acfc-4870-837d-a2e9a3a6003f",
+   "id": "2937029e-10dc-466d-ac40-a5c7798d0105",
    "metadata": {},
    "outputs": [],
    "source": [
     "edge_widths = []\n",
     "for e in G.es:\n",
-    "    edge_widths.append((e[\"poi_diversity\"] * 2) + 0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed0f33c1-2479-4fad-b7d6-09ec1863e298",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    edge_widths.append((e[\"poi_diversity\"] * 2) + 0.25)\n",
+    "\n",
     "fig = plotCheck(\n",
     "    G,\n",
     "    nodes_id,\n",
@@ -715,6 +700,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2da8f43b-218e-4827-a514-cfa24a16814c",
+   "metadata": {},
+   "source": [
+    "#### Plot water links"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f5ccd77d-bc5e-4ce1-8263-819b604f6543",
@@ -723,6 +716,13 @@
    },
    "outputs": [],
    "source": [
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e[\"has_water\"]:\n",
+    "        edge_colors.append(\"blue\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")\n",
+    "\n",
     "fig = plotCheck(\n",
     "    G,\n",
     "    nodes_id,\n",
